Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28832

infinite loop in mariabackup if log LOG_HEADER_FORMAT field is 0

    XMLWordPrintable

Details

    Description

      After MDEV-28473 fix, there is infinite loop in mariabackup:

              if (err != DB_SUCCESS) {
                      msg("Error: cannot read redo log header");
      unlock_and_fail:
                      mysql_mutex_unlock(&log_sys.mutex);
              }
       
              if (log_sys.log.format == 0) {
                      msg("Error: cannot process redo log before MariaDB 10.2.2");
                      goto unlock_and_fail;
              }
      

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              vlad.lesin Vladislav Lesin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5.25h
                  5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.