MDEV-28832 infinite loop in mariabackup if log LOG_HEADER_FORMAT field is 0

Avoid the loop with getting rid of back and forth jumping.